--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,44 @@
-**/*.egg-info
-**/__pycache__
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+*.egg-info/
+
+# Virtual Environment
+venv/
+env/
+.venv
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+coverage.xml
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+
+# Environment
+.env
+secrets/.env
+
+# Git
+.git/
+.gitignore
+
+# Documentation
+docs/
+*.md
+
+# Tests
+tests/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# CI/CD
+.github/
